tests/rosetta/out/Pascal/chaos-game.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/chaos-game.pas
chaos-game.pas(14,23) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
chaos-game.pas(15,41) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
chaos-game.pas(15,52) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
chaos-game.pas(15,52) Note: Call to subroutine "operator mod(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
chaos-game.pas(15,52) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
chaos-game.pas(23,19) Warning: function result variable of a managed type does not seem to be initialized
chaos-game.pas(93,10) Error: Incompatible types: got "TArray$1$crc9F312717" expected "TArray$1$crc006101D9"
chaos-game.pas(94,78) Error: Operator is not overloaded: "TArray$1$crc9F312717" div "ShortInt"
chaos-game.pas(95,78) Error: Operator is not overloaded: "TArray$1$crc9F312717" div "ShortInt"
chaos-game.pas(102,13) Error: Incompatible types: got "Constant String" expected "TArray$1$crc862A1656"
chaos-game.pas(106,134) Error: Incompatible type for arg no. 1: Got "TArray$1$crc862A1656", expected "TArray$1$crc7766314F"
chaos-game.pas(106,15) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crc862A1656", expected "{Open} Array Of Pointer"
chaos-game.pas(23,19) Warning: function result variable of a managed type does not seem to be initialized
chaos-game.pas(23,19) Warning: function result variable of a managed type does not seem to be initialized
chaos-game.pas(113) Fatal: There were 6 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
